| Summary: | ASTERISK-21669: Fix dependencies on res_sip files | ||
| Reporter: | snuffy (snuffy) | Labels: | |
| Date Opened: | 2013-04-23 06:59:56 | Date Closed: | 2013-04-26 16:54:38 |
| Priority: | Trivial | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip Resources/res_pjsip |
| Versions: | SVN | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) xml-depends.diff | |
| Description: | Trivial fixes to modules that were missing res_sip / res_sip_session as required modules.
| ||
| Comments: | By: Rusty Newton (rnewton) 2013-04-24 14:12:26.235-0500 Thanks! By: Matt Jordan (mjordan) 2013-04-26 16:53:31.639-0500 This just made my trunk-based branches very happy. | ||