Add missing module dependencies to various res_sip* modules

This patch updates the various res_sip modules with their proper menuselect
options and proper dependencies, such that Asterisk still has a snowball's
chance in hell of compiling without pjproject.

Much thanks to snuffy(-home|-work) for making everyone's life
easier with this patch.

Review: https://reviewboard.asterisk.org/r/2472/

(closes issue ASTERISK-21669)
Reported by: snuffy
patches:
  xml-depends.diff uploaded by snuffy (license 5024)


git-svn-id: https://origsvn.digium.com/svn/asterisk/trunk@386686 65c4cc65-6c06-0410-ace0-fbb531ad65f3