res/res_sip_endpoint_identifier_user.c
@@ -18,6 +18,7 @@
 
 /*** MODULEINFO
 	<depend>pjproject</depend>
+	<depend>res_sip</depend>
 	<support_level>core</support_level>
  ***/
 
