res/res_sip_outbound_authenticator_digest.c
@@ -16,6 +16,12 @@
  * at the top of the source tree.
  */
 
+/*** MODULEINFO
+	<depend>pjproject</depend>
+	<depend>res_sip</depend>
+	<support_level>core</support_level>
+ ***/
+
 #include "asterisk.h"
 
 #include <pjsip.h>
